# PWM-Fan-Controller

./: .editorconfig  .envrc  .gitignore  .justfile  .pre-commit-config.yaml  .yamllint.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.adoc  check-image-metadata-tests.nu  check-image-metadata.nu  flake.nix  lychee.toml  pre-commit-hooks.nix  treefmt.nix
.cargo/: config.toml
.github/: settings.yml
.github/workflows/: build-attiny85.yaml  build-pico.yaml  build-qt-py-ch32v203.yaml  cargo-lock-updater.yaml  check-image-metadata.yaml  clippy-attiny85.yaml  flake-checker.yaml  flake-lock-updater.yaml  format-just.yaml  link-checker.yaml  pre-commit-autoupdate.yaml  rustfmt.yaml  test-check-image-metadata.yaml  treefmt.yaml  update-nix-direnv.yaml  update-nixos-release.yaml  yamllint.yaml
boards/attiny85/: .envrc  .justfile  Cargo.toml  README.adoc  Ravedude.toml  avr-unknown-none-attiny85.json  default.nix  flake.nix  package.nix  rust-toolchain.toml
boards/attiny85/.cargo/: config.toml
boards/attiny85/src/: main.rs
boards/pico/: .envrc  .justfile  Cargo.toml  Embed.toml  README.adoc  default.nix  rust-toolchain.toml
boards/pico/.cargo/: config.toml
boards/pico/src/: main.rs
boards/qt-py-ch32v203/: .envrc  .justfile  Cargo.toml  README.adoc  default.nix  memory.x  package.nix
boards/qt-py-ch32v203/.cargo/: config.toml
boards/qt-py-ch32v203/src/: main.rs
src/: main.rs
